Compilacion, correcciones